-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 10, 11
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243343 | 11.0.8-oracle | Dmitrij Pochepko | P3 | Resolved | Fixed | b04 |
| JDK-8243955 | 11.0.8 | Dmitrij Pochepko | P3 | Resolved | Fixed | b01 |
LibraryCallKit::inline_math_native ignore existence of StubRoutines::dpow. Probably copy-paste error. Another case is when dexp is defined, but dpow is not. VM will crash in this case.
- backported by
-
JDK-8243343 C2 library_call can potentially ignore Math.pow intrinsic or use null pointer
-
- Resolved
-
-
JDK-8243955 C2 library_call can potentially ignore Math.pow intrinsic or use null pointer
-
- Resolved
-
- relates to
-
JDK-8190869 C2: missing strength reduction of Math.pow(x, 2.0D) to x*x
-
- Resolved
-