8209439: C2 library_call can potentially ignore Math.pow intrinsic or use null pointer

Reviewed-by: kvn, thartmann